packages/typ/tests/fixtures/diagnostics/0150_adt_constructor_bool_arg_mismatch_03.ml.infer.expected
File "0150_adt_constructor_bool_arg_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0150_adt_constructor_bool_arg_mismatch_03 is not a valid module name.

File "0150_adt_constructor_bool_arg_mismatch_03.ml", line 2, characters 14-15:
2 | let _ = BoolC 2
                  ^
Error: The constant 2 has type int but an expression was expected of type
         bool
