packages/typ/tests/fixtures/diagnostics/0150_adt_constructor_bool_arg_mismatch_03.ml
type rec_gamma = IntC of int | BoolC of bool
let _ = BoolC 2
